[package]
name = "pingpong-stylus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = "0.6.2"
alloy-sol-types = "0.3.1"
mini-alloc = "0.4.2"
stylus-sdk = "0.4.2"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
dotenv = "0.15.0"

[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "pingpong-stylus"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
